brain/sources/prod-metadata/objects/Zoom_Recording_User_Folder_Map__c/Zoom_Recording_User_Folder_Map__c.object-meta.xml
<CustomObject>
    <label>Zoom Recording User Folder Map</label>
    <nameField>
        <displayFormat>ZUM-{0000}</displayFormat>
        <label>Zoom_Recording_User_Folder_Map__c Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Recording User Folder Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>