brain/sources/prod-metadata/objects/Zoom_Recording_User_Folder_Map__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department</label>
    <referenceTo>Zoom_Recording_Department__c</referenceTo>
    <relationshipLabel>Zoom Recording User Folder Map</relationshipLabel>
    <relationshipName>Zoom_Recording_User_Folder_Map</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>