brain/sources/prod-metadata/objects/Zoom_Recording_User_Folder_Map__c/fields/Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Folder_Name__c</fullName>
    <label>Folder Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>