brain/sources/prod-metadata/objects/Zoom_Recording_User_Folder_Map__c/fields/Granted_By__c.field-meta.xml
<CustomField>
    <fullName>Granted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Granted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Zoom_Recording_User_Folder_Map1</relationshipName>
    <type>Lookup</type>
</CustomField>