brain/sources/prod-metadata/objects/Zoom_Recording_User_Folder_Map__c/fields/Granted_Date__c.field-meta.xml
<CustomField>
    <fullName>Granted_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Granted Date</label>
    <type>DateTime</type>
</CustomField>