brain/sources/prod-metadata/objects/Zoom_Recording_User_Folder_Map__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>