brain/sources/prod-metadata/objects/Zoom_Recording_User_Folder_Map__c/fields/S3_Folder_Path__c.field-meta.xml
<CustomField>
    <fullName>S3_Folder_Path__c</fullName>
    <externalId>true</externalId>
    <label>S3 Folder Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>