brain/sources/prod-metadata/objects/Zoom_Recording_User_Folder_Map__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <formula>User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Email</label>
    <type>Text</type>
</CustomField>